--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en" ng-app="msyncApp">
 
 <head>
     <meta charset="UTF-8">
     <title>Movie Synchronization</title>
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-    <h1>Movie Synchronization</h1>
+    <div ng-include="'templates/header.html'" ng-controller="HeaderController">
+        
+    </div>
+
+    <div ng-view class="container">
+
+    </div>
+
+    <!-- Libraries -->
+    <script type="text/javascript" src="libs/angular/angular.js"></script>
+    <script type="text/javascript" src="libs/angular/angular-route.js"></script>
+    <script type="text/javascript" src="libs/angular/angular-resource.js"></script>
+    <script type="text/javascript" src="libs/jquery/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="libs/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
+    <!-- Services -->
+    <script type="text/javascript" src="js/services/auth-service.js"></script>
+
+    <!-- Controllers -->
+    <script type="text/javascript" src="js/controllers/header-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/login-controller.js"></script>
+    <script type="text/javascript" src="js/controllers/register-controller.js"></script>
 </body>
 
 </html>
